@@ -23,6 +23,9 @@
   - deraadt@cvs.openbsd.org 2001/02/12 22:56:09
      [clientloop.c packet.c ssh-keyscan.c]
      deal with EAGAIN/EINTR selects which were skipped
+  - markus@cvs.openssh.org 2001/02/13 22:49:40
+    [auth1.c auth2.c]
+    setproctitle(user) only if getpwnam succeeds
 
 20010214
  - (djm) Don't try to close PAM session or delete credentials if the
@@ -3951,4 +3954,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.765 2001/02/15 03:12:08 mouring Exp $
+$Id: ChangeLog,v 1.766 2001/02/15 03:14:11 mouring Exp $
